--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.3.0",
+    "@react-native-firebase/auth": "^11.3.0",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
@@ -15,9 +22,13 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-date-picker": "^3.2.10",
+    "react-native-elements": "^3.3.2",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.3",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.2",
+    "react-native-ui-xg": "^0.0.6",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
