--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.3.0",
     "@react-native-firebase/auth": "^11.3.0",
+    "@react-native-firebase/firestore": "^11.3.0",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -19,6 +20,7 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "firebase": "^8.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
